Fix line breaks in help dialog (#2038)

--- a/frontend/src/material.override.scss
+++ b/frontend/src/material.override.scss
@@ -17,6 +17,11 @@
     div[mat-dialog-content] p {
       white-space: pre;
     }
+
+    ige-context-help mat-dialog-content p,
+    ige-context-help div[mat-dialog-content] p {
+      white-space: normal;
+    }
   }
 }
 
